# release-testing

./: README.md  pyproject.toml
.github/workflows/: dev-test.yaml  manual-release.yaml  release.yaml  rollback-staging.yaml  staging-tests.yaml  test-manual.yaml
tests/: test_sum.py
