[build-system]
requires = ["setuptools>=64.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "myapp"
version = "0.1.0"
description = "A simple Python application for summing numbers."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = []

[tool.setuptools]
packages = ["myapp"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]
pythonpath = [
  "."
]
